【修正】异味修复